# WaifuPicsPython

./: .gitignore  LICENSE  README.md  async_example.py  example.py  pyproject.toml  setup.cfg  sync_example.py
WaifuPicsPython/: __init__.py  async_session.py  errors.py  example.py  sync_session.py  variables.py
waifupicspython/: __init__.py  _defaults.py  async_session.py  constants.py  sync_session.py
