[metadata]
name = WaifuPicsPython
version = 0.0.3
author = Scrumpyy
author_email = scrumpy@weeb.email
description = An asyncronous API wrapper for https://waifu.pics written in Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Scrumpyy/WaifuPicsPython
project_urls = 
    Bug Tracker = https://github.com/Scrumpyy/WaifuPicsPython/issues
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6